# Bharat-ai-

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py  ui_support.py
bharatai/: __init__.py
bharatai/agents/: __init__.py  base.py  bureaucracy_translator_agent.py  citizen_profile_agent.py  document_intelligence_agent.py  eligibility_agent.py  profile_normalizer.py  recommendation_agent.py  reminder_agent.py  rule_evaluator.py  scheme_discovery_agent.py
bharatai/agents/prompts/: eligibility_explain.txt  recommendation_rank.txt  translate_simplify.txt
bharatai/application/: __init__.py  dto.py
bharatai/application/ports/: __init__.py  auth.py  clock.py  documents.py  knowledge.py  llm.py  ocr.py  repositories.py  runner.py
bharatai/application/services/: __init__.py  application_service.py  audit_service.py  auth_service.py  citizen_service.py  document_service.py  eligibility_service.py  lost_benefits_service.py  reminder_service.py  scheme_service.py  translator_service.py
bharatai/application/use_cases/: __init__.py  detect_lost_benefits.py  discover_schemes.py  evaluate_eligibility.py  schedule_reminders.py  validate_document.py
bharatai/bootstrap/: __init__.py  container.py  factory.py  service_bundle.py  testing.py
bharatai/common/: __init__.py  exceptions.py  ids.py  logging.py  redaction.py  types.py
bharatai/config/: __init__.py  settings.py
bharatai/domain/: __init__.py  application.py  base.py  citizen.py  document.py  eligibility.py  enums.py  identity.py  reminder.py  scheme.py  value_objects.py
bharatai/infrastructure/: __init__.py  clock.py
bharatai/infrastructure/db/: __init__.py  connection.py  mappers.py  schema.sql  unit_of_work.py
bharatai/infrastructure/db/migrations/: 0001_init.sql  0002_identity.sql
bharatai/infrastructure/db/repositories/: __init__.py  _base.py  application_repo.py  audit_repo.py  citizen_repo.py  document_repo.py  eligibility_repo.py  reminder_repo.py  scheme_repo.py  user_repo.py
bharatai/infrastructure/knowledge/: __init__.py  chunking.py  faiss_store.py  grounding.py  llamaindex_kb.py
bharatai/infrastructure/llm/: __init__.py  caching.py  embeddings.py  ollama_client.py
bharatai/infrastructure/ocr/: __init__.py  field_parsers.py  paddle_adapter.py  parsing.py  scoring.py  service.py  validators.py
bharatai/infrastructure/security/: __init__.py  otp_provider.py  password_hasher.py  token_service.py
bharatai/infrastructure/storage/: __init__.py  file_store.py
bharatai/orchestration/: __init__.py  checkpoint.py  graph_builder.py  registry.py  runner.py  state.py
bharatai/ui/: __init__.py  app.py  formatting.py  state.py
bharatai/ui/components/: __init__.py  charts.py  document_uploader.py  eligibility_table.py  profile_form.py  reminder_list.py  scheme_card.py
bharatai/ui/pages/: 0_Home.py  1_Citizen_Profile.py  2_Government_Schemes.py  3_Document_Upload.py  4_Eligibility_Report.py  5_Lost_Benefits_Dashboard.py  6_Translator.py  7_Reminder_Center.py  8_Settings.py
docs/: ARCHITECTURE.md  DECISIONS.md  DEPLOYMENT.md  OPTIMIZATION.md  SCHEME_CURATION.md
pages/: 1_Government_Schemes.py  2_Eligibility_Assistant.py  3_Reminder_Center.py  4_Settings.py
scripts/: check.sh
tests/: conftest.py
tests/architecture/: test_import_contracts.py
tests/fakes/: fake_file_store.py  fake_knowledge.py  fake_llm.py  fake_ocr.py  fake_repositories.py
tests/integration/: test_bootstrap.py  test_factory.py  test_graph_end_to_end.py  test_knowledge_index.py  test_paddle_ocr.py
tests/unit/: test_property.py
tests/unit/agents/: test_agent_base.py  test_citizen_profile_agent.py  test_document_agent.py  test_eligibility_agent.py  test_profile_normalizer.py  test_recommendation_agent.py  test_reminder_agent.py  test_rule_evaluator.py  test_scheme_discovery_agent.py  test_translator_agent.py
tests/unit/application/: test_auth_service.py  test_eligibility_service.py  test_services.py
tests/unit/common/: test_logging.py
tests/unit/config/: test_settings.py
tests/unit/domain/: test_domain_isolation.py  test_identity.py  test_value_objects.py
tests/unit/infrastructure/: test_caching_llm.py  test_chunking.py  test_citizen_repo.py  test_faiss_kb.py  test_file_store.py  test_grounding.py  test_identity_repos.py  test_mappers.py  test_ocr_extractors.py  test_ocr_parsing.py  test_ocr_validation.py  test_repositories.py  test_security.py
